rust_writer_procedural/tests/ui/impl_finder_fails_if_lifetime_not_specified.stderr
error: unexpected end of input, expected lifetime
 --> tests/ui/impl_finder_fails_if_lifetime_not_specified.rs:5:1
  |
5 | #[impl_finder]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `impl_finder` (in Nightly builds, run with -Z macro-backtrace for more info)
